--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@ th {
 
 td,th {
   padding: 5px;
+  text-align: center;
 }
 
 .dashboard {
@@ -22,4 +23,19 @@ td,th {
 
 .charts {
   display: flex;
+}
+
+.filter-button {
+  position: relative;
+  z-index: 2;
+}
+
+
+table {
+  margin-right: 45px;
+}
+
+.filter-button span {
+  position: relative;
+  z-index: -1;
 }
