added avg. + max num

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -7,6 +7,13 @@
         width: 50%
         padding: 15px
 
+.average
+    background: #eee
+    padding: 15px
+    width: 74%
+    margin-left: 10%
+    border-radius: 6px
+
 
 
 
